# histr

./: .gitignore  Cargo.toml  Justfile  README.md  test.bats
.github/workflows/: rust.yml
data/: README.md
src/: bin.rs  bins.rs  density.rs  fast.rs  hist.rs  lib.rs  main.rs  parse.rs  serde.rs  stats.rs
