[package]
name = "streamhist"
version = "0.1.0"
edition = "2021"
authors = ["Tymoteusz Wolodzko"]
description = "Implementation of streaming histograms as described in the A Streaming Parallel Decision Tree Algorithm paper by Ben-Haim and Tom-Tov (2010)."
repository = "https://github.com/twolodzko/streamhist"
exclude = ["/examples"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
float-pretty-print = "0.1.1"
rmp-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
test-case = "3.1.0"
tempdir = "0.3.7"

[profile.optimized]
# see: https://doc.rust-lang.org/rustc/codegen-options/index.html
inherits = "release"
strip = "symbols"
lto = true
