[package]
name = "histr"
version = "0.1.0"
edition = "2021"
authors = ["Tymoteusz Wolodzko"]
description = "Implementation of streaming histograms as described in the A Streaming Parallel Decision Tree Algorithm paper by Ben-Haim and Tom-Tov (2010)."
repository = "https://github.com/twolodzko/histr"
exclude = ["/data", "/.github"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

clap = { version = "4.2.4", features = ["derive"], optional = true }
float-pretty-print = { version = "0.1.1", optional = true }

[dev-dependencies]
test-case = "3.1.0"
tempdir = "0.3.7"
approx = "0.5.1"

[profile.optimized]
# see: https://doc.rust-lang.org/rustc/codegen-options/index.html
inherits = "release"
strip = "symbols"
lto = true

[lib]
name = "histr"

[features]
build-binary = ["dep:clap", "dep:float-pretty-print"]

[[bin]]
# see: https://stackoverflow.com/a/46017284/3986320
name = "histr"
required-features = ["build-binary"]
